# glucose-monitor-api

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini
docker/: Dockerfile  entrypoint.sh
src/: manage.py
src/glucosemonitor/: asgi.py  settings.py  urls.py  wsgi.py
src/glucosemonitor/levels/: apps.py  filters.py  models.py  serializers.py  views.py
src/glucosemonitor/levels/management/commands/: load_sample_data.py
src/glucosemonitor/levels/migrations/: 0001_initial.py
src/glucosemonitor/levels/utils/: csv_processing.py
tests/: conftest.py  test_csv_processing.py  test_models.py  test_views.py
